# bmserver

./: Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  web.py
src/bmserver/: cli.py  schema.py  settings.py  utils.py
src/bmserver/chat/: cli.py  database.py  models.jsonl  page.py  schema.py
src/bmserver/chat/utils/: benchmark.py  client.py  hub.py  server.py
